[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocationLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.1
text = "Main Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="."]
margin_left = 114.0
margin_top = 22.0
margin_right = 203.0
margin_bottom = 42.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadSaveButton" type="Button" parent="."]
margin_left = 113.0
margin_top = 51.0
margin_right = 202.0
margin_bottom = 71.0
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveGameButton" type="Button" parent="."]
margin_left = 113.0
margin_top = 81.0
margin_right = 202.0
margin_bottom = 101.0
text = "Save Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="."]
margin_left = 113.0
margin_top = 115.0
margin_right = 202.0
margin_bottom = 135.0
text = "Options"

[node name="QuitButton" type="Button" parent="."]
margin_left = 113.0
margin_top = 146.0
margin_right = 201.0
margin_bottom = 166.0
text = "Quit"
